--- a/css/main.css
+++ b/css/main.css
@@ -323,7 +323,7 @@ p, label{
     .jl-overlay{
         width: 100%;
         height: 100vh;
-        display: block;
+        display: none;
         position: fixed;
         z-index: 1000;
         top: 0;
@@ -334,7 +334,7 @@ p, label{
     .jl-modal{
         background-color: var(--dark-color);
         width: 800px;
-        display: table;
+        display: none;
         position: fixed;
         padding: 30px;
         border-radius: 0 30px 30px;
