--- a/css/main.css
+++ b/css/main.css
@@ -331,11 +331,12 @@ p, label{
         height: 400px;
         display: table;
         position: absolute;
-        left: 15px;
-        top: 26vh;
+        /* left: 15px; */
+        top: 28vh;
+        margin-left: 0;
     }
 
-    .jl-item-counter {
+    .jl-navigator-counter {
         width: 100%;
         height: 90px;
         display: block;
@@ -343,7 +344,7 @@ p, label{
         position: relative;
     }
 
-    .jl-item-counter::before {
+    .jl-navigator-counter::before {
         content: "";
         display: block;
         width: 35px;
@@ -354,7 +355,7 @@ p, label{
         left: 1px;
     }
     
-    .jl-item-counter span{
+    .jl-navigator-counter span{
         color: var(--primary-color);
         font-family: 'Open Sans', sans-serif;
         font-size: 120px;
@@ -385,12 +386,38 @@ p, label{
         margin-bottom: 30px;
     }
 
-    .jl-portifolio-next-prev {
+    .jl-next-prev {
         width: 100%;
         height: 45px;
-        display: block;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
         background-color: var(--form-color);
         border-radius: 0 23px 23px 0;
+    }
+
+    .jl-item-prev, .jl-item-next{
+        cursor: pointer;
+    }
+
+    jl-next-prev > div {
+        height: 32px;
+        line-height: 32px;
+    }
+
+    .jl-items-counter {
+        font-family: 'Open Sans', sans-serif;
+        color: var(--text-primary)
+    }
+
+    .jl-items-counter span:nth-child(1){
+        color: var(--primary-color);
+    }
+
+    .jl-item-prev i, .jl-item-next i{
+        font-size: 2rem;
+        color: var(--primary-color);
+        text-align: center;
     }
 
 
