--- a/css/main.css
+++ b/css/main.css
@@ -513,7 +513,7 @@ p, label{
     }
 
 
-    .jl-slider-list .jl-portfolio-item-thumb img, .jl-portfolio-list .jl-portfolio-item-thumb img {
+    .jl-slider-list .jl-portfolio-item-thumb img {
         width: 100%;
         max-width: 100%;
         height: auto;
@@ -522,11 +522,15 @@ p, label{
         transform: scale(0);
     }
 
-    .jl-portfolio-list .jl-portfolio-item-thumb img{
-        transform: scale(1);
+    .jl-portfolio-list .jl-portfolio-item-thumb img {
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+        position: relative;
+        left: -45px;
     }
 
-    .jl-slider-list .jl-portfolio-box, .jl-portfolio-list .jl-portfolio-box  {
+    .jl-slider-list .jl-portfolio-box  {
         width: 100%;
         height: 100%;
         display: block;
@@ -539,8 +543,13 @@ p, label{
     }
 
     .jl-portfolio-list .jl-portfolio-box  {
-        transform: scaleX(1);
-        
+        width: 100%;
+        height: 100%;
+        display: block;
+        background-color: #2c2c2c;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 
 
