--- a/css/main.css
+++ b/css/main.css
@@ -883,6 +883,10 @@ p, label{
     margin-top: 15px;
 }
 
+.jl-mar-top-30 {
+    margin-top: 30px;
+}
+
 .jl-mar-bottom-15{
     margin-bottom: 15px;
 }
